--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ gloo-net = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+[dev-dependencies]
+tempfile = "3"
+
 [profile]
 
 [profile.wasm-dev]
