--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,14 @@ gloo-timers = { version = "0.3", features = ["futures"] }
 gloo-net = "0.6"
 clap = { version = "4.4", features = ["derive"], optional = true }
 toml = { version = "0.8", optional = true }
+ureq = { version = "2.9", features = ["json"], optional = true }
+flate2 = { version = "1.0", optional = true }
+tar = { version = "0.4", optional = true }
+dirs = { version = "5.0", optional = true }
 
 [features]
-default = ["cli"]
-cli = ["clap", "toml"]
+default = []
+cli = ["clap", "toml", "ureq", "flate2", "tar", "dirs"]
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -40,6 +44,7 @@ serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3"
+toml = "0.8"
 
 [profile]
 
