update for actions

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -38,7 +38,7 @@ jobs:
             ${{ runner.os }}-cargo-
 
       - name: Install Dioxus CLI
-        run: cargo install dioxus-cli --locked || true
+        run: cargo install dioxus-cli@0.6.3 --locked || true
 
       - name: Build Dioxus App
         run: dx build --release
