--- a/.github/workflows/deploy-registry.yml
+++ b/.github/workflows/deploy-registry.yml
@@ -23,18 +23,14 @@ jobs:
 
       - name: Install dependencies
         working-directory: registry
-        run: npm ci
-
-      - name: Run tests
-        working-directory: registry
-        run: npm test
+        run: npm install
 
       - name: Run D1 migrations
         working-directory: registry
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler d1 migrations apply logos-registry --remote
+        run: npx wrangler d1 execute logos-registry --remote --file=migrations/0001_initial_schema.sql || true
 
       - name: Deploy to Cloudflare
         working-directory: registry
