--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ path = "src/main.rs"
 required-features = ["cli"]
 
 [workspace]
-exclude = ["logos_core"]
+exclude = ["logos_core", "logos_verification"]
 
 [dependencies]
-bumpalo = "3.14"
+bumpalo = "3.19.1"
 dioxus = { version = "0.6", features = ["web", "router"] }
 wasm-bindgen = "0.2"
 js-sys = "0.3"
@@ -42,10 +42,12 @@ ureq = { version = "2.9", features = ["json"], optional = true }
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 dirs = { version = "5.0", optional = true }
+logos_verification = { path = "./logos_verification", optional = true }
 
 [features]
 default = []
 cli = ["clap", "toml", "ureq", "flate2", "tar", "dirs"]
+verification = ["logos_verification"]
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
