--- a/logos_core/Cargo.toml
+++ b/logos_core/Cargo.toml
@@ -18,3 +18,23 @@ serde = { version = "1.0", features = ["derive"] }
 # Phase 48: Sipping Protocol
 sha2 = "0.10"
 uuid = { version = "1.0", features = ["v4"] }
+# Phase 51: P2P Networking (The Mesh)
+libp2p = { version = "0.54", features = [
+    "tcp",
+    "quic",
+    "noise",
+    "yamux",
+    "mdns",
+    "request-response",
+    "gossipsub",  # Phase 52: GossipSub for CRDT sync
+    "macros",
+    "tokio"
+] }
+bincode = "1.3"
+futures = "0.3"
+async-trait = "0.1"
+# Phase 52: Lazy statics for GossipSub subscriptions
+once_cell = "1.19"
+
+[dev-dependencies]
+tempfile = "3.10"
