--- a/.github/workflows/deploy-registry.yml
+++ b/.github/workflows/deploy-registry.yml
@@ -1,31 +1,48 @@
 name: Deploy Registry
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'registry/**'
+  workflow_run:
+    workflows: ["Tests"]
+    types: [completed]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy Registry Worker
+    # Only deploy if tests passed and this was a push (not PR)
+    if: >
+      github.event_name == 'workflow_dispatch' ||
+      (github.event.workflow_run.conclusion == 'success' &&
+       github.event.workflow_run.event == 'push')
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha || github.sha }}
+
+      - name: Check for relevant changes
+        uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            registry:
+              - 'registry/**'
 
       - name: Setup Node.js
+        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
       - name: Install dependencies
+        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         run: npm install
 
       - name: Run D1 migrations
+        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -33,6 +50,7 @@ jobs:
         run: npx wrangler d1 execute logos-registry --remote --file=migrations/0001_initial_schema.sql || true
 
       - name: Deploy to Cloudflare
+        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
