--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,10 @@ include_dir = "0.7"
 gloo-timers = { version = "0.3", features = ["futures"] }
 gloo-net = "0.6"
 wasm-bindgen-futures = "0.4"
+# Phase 55: logos_core for VFS and Persistent<T> in interpreter
+logos_core = { path = "./logos_core" }
+# Phase 55: async-recursion for clean async interpreter
+async-recursion = "1.1"
 clap = { version = "4.4", features = ["derive"], optional = true }
 toml = { version = "0.8", optional = true }
 ureq = { version = "2.9", features = ["json"], optional = true }
