--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,26 +21,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.workflow_run.head_sha || github.sha }}
-
-      - name: Check for relevant changes
-        uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            frontend:
-              - 'src/**'
-              - 'assets/**'
-              - 'Cargo.toml'
-              - 'Dioxus.toml'
+          fetch-depth: 0
 
       - name: Setup Rust
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: wasm32-unknown-unknown
 
       - name: Cache Cargo
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         uses: actions/cache@v4
         with:
           path: |
@@ -54,17 +42,16 @@ jobs:
             ${{ runner.os }}-cargo-
 
       - name: Install Dioxus CLI
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         run: cargo install dioxus-cli@0.6.3 --locked || true
 
       - name: Build Dioxus App
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         run: dx build --release
 
       - name: Deploy to Cloudflare Pages
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy target/dx/logos/release/web/public --project-name=logicaffeine --commit-dirty=true
+        env:
+          WRANGLER_LOG: debug
