--- a/.github/workflows/deploy-registry.yml
+++ b/.github/workflows/deploy-registry.yml
@@ -21,28 +21,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.workflow_run.head_sha || github.sha }}
-
-      - name: Check for relevant changes
-        uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            registry:
-              - 'registry/**'
+          fetch-depth: 0
 
       - name: Setup Node.js
-        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
       - name: Install dependencies
-        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         run: npm install
 
       - name: Run D1 migrations
-        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -50,9 +40,9 @@ jobs:
         run: npx wrangler d1 execute logos-registry --remote --file=migrations/0001_initial_schema.sql || true
 
       - name: Deploy to Cloudflare
-        if: steps.changes.outputs.registry == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: registry
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          WRANGLER_LOG: debug
         run: npx wrangler deploy
