--- a/crates/logicaffeine_lexicon/Cargo.toml
+++ b/crates/logicaffeine_lexicon/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "logicaffeine-lexicon"
 version = "0.6.0"
-edition = "2021"
-description = "English vocabulary types and compile-time lexicon lookup for logicaffeine"
+edition.workspace = true
+authors.workspace = true
+repository.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 license = "BUSL-1.1"
+description = "English vocabulary types and compile-time lexicon lookup for logicaffeine"
+readme = "README.md"
 
 [dependencies]
-logicaffeine-base = { path = "../logicaffeine_base" }
+logicaffeine-base = { version = "0.6.0", path = "../logicaffeine_base" }
 
 # For dynamic-lexicon feature (runtime JSON loading)
 serde = { version = "1.0", features = ["derive"], optional = true }
