--- a/crates/logicaffeine_kernel/Cargo.toml
+++ b/crates/logicaffeine_kernel/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "logicaffeine-kernel"
 version = "0.6.0"
-edition = "2021"
-description = "Pure Calculus of Constructions type theory - NO LEXICON"
+edition.workspace = true
+authors.workspace = true
+repository.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 license = "BUSL-1.1"
+description = "Pure Calculus of Constructions type theory - NO LEXICON"
+readme = "README.md"
 
 [dependencies]
-logicaffeine-base = { path = "../logicaffeine_base" }
+logicaffeine-base = { version = "0.6.0", path = "../logicaffeine_base" }
 # CRITICAL: NO LEXICON DEPENDENCY - Milner Invariant
