--- a/crates/logicaffeine_system/Cargo.toml
+++ b/crates/logicaffeine_system/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "logicaffeine-system"
 version = "0.6.0"
-edition = "2021"
-description = "Platform IO and system services for LOGOS"
+edition.workspace = true
+authors.workspace = true
+repository.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 license = "BUSL-1.1"
+description = "Platform IO and system services for LOGOS"
+readme = "README.md"
 
 [features]
 default = []  # LEAN by default - no network, no persistence, no parallelism
@@ -19,8 +26,8 @@ distributed = ["networking", "persistence"]  # For Distributed<T>
 
 [dependencies]
 # Always included (lightweight core)
-logicaffeine-base = { path = "../logicaffeine_base" }
-logicaffeine-data = { path = "../logicaffeine_data" }
+logicaffeine-base = { version = "0.6.0", path = "../logicaffeine_base" }
+logicaffeine-data = { version = "0.6.0", path = "../logicaffeine_data" }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
 async-trait = "0.1"
