--- a/crates/logicaffeine_verify/Cargo.toml
+++ b/crates/logicaffeine_verify/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.6.0"
 edition = "2021"
 description = "Z3-based static verification for Logicaffeine (requires Pro+ license)"
 license = "BUSL-1.1"
+publish = false
 
 [dependencies]
 # SMT solver
