--- a/crates/logicaffeine_compile/Cargo.toml
+++ b/crates/logicaffeine_compile/Cargo.toml
@@ -33,5 +33,9 @@ serde_json = "1.0"
 # Standard library
 include_dir = "0.7"
 
+# WASM async sleep support
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gloo-timers = { version = "0.3", features = ["futures"] }
+
 [dev-dependencies]
 tempfile = "3.10"
