--- a/apps/logicaffeine_web/Cargo.toml
+++ b/apps/logicaffeine_web/Cargo.toml
@@ -34,6 +34,7 @@ web-sys = { version = "0.3", features = [
 wasm-bindgen-futures = "0.4"
 gloo-timers = { version = "0.3", features = ["futures"] }
 gloo-net = "0.6"
+gloo-storage = "0.3"
 
 # Utilities
 serde = { version = "1.0", features = ["derive"] }
