fix studio attempt

--- a/crates/logicaffeine_system/Cargo.toml
+++ b/crates/logicaffeine_system/Cargo.toml
@@ -64,7 +64,8 @@ web-sys = { version = "0.3", features = [
     "FileSystemDirectoryHandle", "FileSystemFileHandle",
     "FileSystemWritableFileStream", "FileSystemGetFileOptions",
     "FileSystemGetDirectoryOptions", "FileSystemCreateWritableOptions",
-    "File", "Blob", "DomException"
+    "File", "Blob", "DomException",
+    "Worker", "WorkerOptions", "WorkerType", "MessageEvent", "ErrorEvent"
 ]}
 
 [dev-dependencies]
