--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build workspace
         run: cargo build --workspace --verbose
 
+      - name: Build LSP binary
+        run: cargo build -p logicaffeine-lsp --release
+
       - name: Run all tests
         run: |
           set -o pipefail
