--- a/editors/vscode/logicaffeine/package.json
+++ b/editors/vscode/logicaffeine/package.json
@@ -67,6 +67,7 @@
     "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/vscode": "^1.75.0",
     "typescript": "^5.3.0"
   }
