--- a/crates/logicaffeine_compile/Cargo.toml
+++ b/crates/logicaffeine_compile/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "logicaffeine-compile"
-version = "0.8.1"
+version = "0.8.2"
 edition.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -18,15 +18,16 @@ codegen = []
 interpreter-only = []
 
 [dependencies]
-logicaffeine-base = { version = "0.8.1", path = "../logicaffeine_base" }
-logicaffeine-language = { version = "0.8.1", path = "../logicaffeine_language" }
-logicaffeine-kernel = { version = "0.8.1", path = "../logicaffeine_kernel" }
-logicaffeine-data = { version = "0.8.1", path = "../logicaffeine_data" }
-logicaffeine-system = { version = "0.8.1", path = "../logicaffeine_system", features = ["persistence"] }
-logicaffeine-proof = { version = "0.8.1", path = "../logicaffeine_proof" }
+logicaffeine-base = { version = "0.8.2", path = "../logicaffeine_base" }
+logicaffeine-language = { version = "0.8.2", path = "../logicaffeine_language" }
+logicaffeine-kernel = { version = "0.8.2", path = "../logicaffeine_kernel" }
+logicaffeine-data = { version = "0.8.2", path = "../logicaffeine_data" }
+logicaffeine-system = { version = "0.8.2", path = "../logicaffeine_system", features = ["persistence"] }
+logicaffeine-proof = { version = "0.8.2", path = "../logicaffeine_proof" }
 
 # Runtime dependencies
 async-recursion = "1.1"
+futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
