--- a/crates/logicaffeine_data/Cargo.toml
+++ b/crates/logicaffeine_data/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 
 [dependencies]
 logicaffeine-base = { version = "0.8.19", path = "../logicaffeine_base" }
+rustc-hash = "2"
 serde = { version = "1.0", features = ["derive"] }
 # CRITICAL: NO IO DEPENDENCIES - Lamport Invariant
 # No tokio, libp2p, std::time::SystemTime allowed
